fix: alignment of download buttons

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -37,8 +37,9 @@
   
   .download-button {
     margin-left: auto;
-    padding-right: 8%;
-    padding-top: 3%;
+    padding-right: 1.5%;
+    padding-left: 1.5%;
+    padding-top: 1.2%;
     // margin-top: -19px;
     // margin-left: -51px;
     // white-space: nowrap;
